# zk_gpu

./: Cargo.toml  build.rs
cuda/: bn256.h  curve.cuh  fft.cu  gpu_math.h
src/: api.rs  config.rs  error.rs  gpulock.rs  lib.rs  main.rs  threadpool.rs
