[package]
name = "zk_gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.1"
crossbeam-queue = "0.3.8"
yastl = "0.1.2"
log = "0.4.14"
num_cpus = "1.13.0"
once_cell = "1.8.0"
thiserror = "1.0.30"
libc = "0.2.147"
lazy_static = "1.4.0"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
serde_json = "1.0"
ff = "0.12.0"
env_logger = "0.8.0"

[dev-dependencies]
temp-env = "0.3.0"

[build-dependencies]
cc = "*"
cmake = "0.1.50"